# aethos

./: .dockerignore  .env.example  .gitignore  ACTIVATE_ALL_AETHOS_FEATURES.md  AETHOS_BRANDING_OWNER_FIX.md  AETHOS_CRITICAL_ISSUES_FIX.md  AETHOS_HANDOFF_PACKAGE.md  AUTONOMOUS_EXECUTION_FIX.md  AUTO_RECOVERY_PERMANENT_FIX.md  CHANGELOG.md  CODEX_FILE_WRITE_FIX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURSOR_PROJECT_HANDOFF.md  Dockerfile  LICENSE  LICENSE.AGPL  LICENSE.commercial  LICENSE.disclaimer  MARKETPLACE_AND_ASSIGNMENT_FIXES.md  MARKETPLACE_REGISTRY_FIX.md  MISSION_CONTROL_NATURAL_LANGUAGE_FIX.md  MISSION_CONTROL_UNIFICATION_FIX.md  NATURAL_LANGUAGE_AGENT_CREATION_FIX.md  PROJECT_HANDOFF.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  RELEASE_NOTES.md  SECURITY.md  SETUP_AUTH_FIX.md  TRADEMARK.md  docker-compose.cloud.yml  docker-compose.override.example.yml  docker-compose.sqlite.yml  docker-compose.yml  env.autonomy.example  env.docker.example  importlinter.ini  install.sh  legacy_branding_real_scan.txt  (+11 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labeler.yml
aethos-mobile/: App.tsx  README.md  app.json  package-lock.json  package.json  tsconfig.json
aethos_cli/: __init__.py  __main__.py  agent_commands.py  banner.py  bot_config.py  cli_config.py  cli_features.py  cli_open.py  cli_parser_helpers.py  cli_status.py  cloud_commands.py  connection_cli.py  db_migration.py  env_util.py  migrate_agent_scopes.py  parity_cli.py  platform.py  pr_review.py  restart_cli.py  runtime_launch_cli.py  runtime_process_cli.py  setup_actionable_recovery.py  setup_channels.py  setup_completion_guidance.py  setup_conversation_context.py  setup_conversational.py  setup_doctor.py  setup_enterprise.py  setup_health.py  setup_integrations_detect.py  setup_interactive_mode.py  setup_mission_control.py  setup_onboarding_profile.py  setup_orchestrator_onboarding.py  setup_progress_state.py  setup_prompt_runtime.py  setup_ready_state_semantics.py  setup_routing.py  setup_secrets.py  setup_supervision_preflight.py  (+5 more)
aethos_core/: __init__.py  plugin_manager.py  (+1 more)
nexa-ext-pro/: README.md  pyproject.toml
nexa-ext-pro/nexa_ext/: __init__.py  dev_execution.py  memory_intel.py  routing.py  sandbox.py
(+3405 files in other folders)
